tests/ui/generic-associated-types/bugs/issue-87735.stderr
error[E0207]: the type parameter `U` is not constrained by the impl trait, self type, or predicates
  --> $DIR/issue-87735.rs:25:13
   |
LL | impl<'b, T, U> AsRef2 for Foo<T>
   |             ^ unconstrained type parameter

error[E0309]: the parameter type `U` may not live long enough
  --> $DIR/issue-87735.rs:34:3
   |
LL |   type Output<'a> = FooRef<'a, U> where Self: 'a;
   |   ^^^^^^^^^^^^--^
   |   |           |
   |   |           the parameter type `U` must be valid for the lifetime `'a` as defined here...
   |   ...so that the type `U` will meet its required lifetime bounds...
   |
note: ...that is required by this bound
  --> $DIR/issue-87735.rs:23:22
   |
LL | struct FooRef<'a, U>(&'a [U]);
   |                      ^^^^^^^
help: consider adding an explicit lifetime bound
   |
LL |   type Output<'a> = FooRef<'a, U> where Self: 'a, U: 'a;
   |                                                 +++++++

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0207, E0309.
For more information about an error, try `rustc --explain E0207`.
